...
                                <color key="barTintColor" red="0.20000000300000001" green="0.20000000300000001" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
                                <textAttributes key="titleTextAttributes">
                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </textAttributes>
                                <items>
                                    <navigationItem title="All Habits" id="vMn-ud-nfi">
                                        <barButtonItem key="leftBarButtonItem" title="Edit" id="RCw-GH-Ztc">
                                            <connections>
                                                <action selector="editAction:" destination="BYZ-38-t0r" id="jDS-Ya-Pdd"/>
                                            </connections>
                                        </barButtonItem>
                                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="eHe-9L-1WM">
...
                                        <rect key="frame" x="0.0" y="79" width="375" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Lqa-kF-cYc" id="8u0-9b-pEa">
                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.666666666666664"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Habit Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7yv-o4-DvL">
                                                    <rect key="frame" x="15" y="6" width="345" height="30"/>
                                                    <nil key="textColor"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="done"/>
                                                    <connections>
                                                        <action selector="habitDescriptionEntered:" destination="h3i-5D-ZSh" eventType="editingChanged" id="cpF-07-wVu"/>
...
                        </sections>
                        <connections>
                            <outlet property="dataSource" destination="h3i-5D-ZSh" id="wUD-TC-qSR"/>
                            <outlet property="delegate" destination="h3i-5D-ZSh" id="Pjv-IM-4Iy"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="New Habit" id="Dtu-5d-6DL">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="dHO-fP-mvG">
                            <connections>
                                <action selector="cancel:" destination="h3i-5D-ZSh" id="lKy-ah-moT"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="1sb-EE-qTX">
...
