...
        }
    }
    
    /* Do tasks before presenting another view */
    override func prepare(for segue: UIStoryboardSegue, sender: Any?) {
        self.searchController.dismiss(animated: true, completion: nil)
        if segue.identifier == "segueToNewHabit" && habitsTable.isEditing && leftBarItem.title == "Done" {
            if let navVC = segue.destination as? UINavigationController{
                if let addHabitVC = navVC.viewControllers[0] as? AddHabitVC{
                    addHabitVC.rowPassed = rowSelected
                }
            }
        }
...
