...
    //private var mode: Int = 0
    
    //private var selectedInterval: Int = 60
    //private var alertOptionsMode0Text: String = "Never"
    //private var alertOptionsMode1Text: String = "Every 1 minute"
    
    /* Disables "Save" button if no text is in the textfield */
    internal func checkDescription() {
        let description = habitDescription.text ?? ""
        saveButton.isEnabled = !description.isEmpty
    }
    
    /* Dynamically checks if there's text in the textfield as you type */
...
